# n8n

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md
.github/workflows/: deploy.yml
backend/: .env  .env.example  alembic.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_refresh_tokens.py
backend/core/: config.py  limiter.py
backend/db/: database.py  encryption.py
backend/executor/: executor.py
backend/models/: credentials.py  execution.py  refresh_token.py  user.py  webhook.py  workflow.py
backend/nodes/: email_node.py  telegram_node.py
backend/routers/: auth.py  credential.py  webhook.py  workflow.py
backend/schema_cred_data/: email_cred_val.py  tele_cred_val.py
backend/schema_node/: email_val.py  tele_val.py  trigger_val.py
backend/schemas/: __init__.py  credentials.py  execution.py  pagination.py  platform.py  user.py  webhook.py  workflow.py
frontend/: .env.production  .prettierignore  .prettierrc.json  CHANGES.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/credentials/: CredentialForm.tsx
frontend/src/components/layout/: AppSidebar.tsx  MainLayout.tsx
frontend/src/components/workflow/: NodeConfigPanel.tsx  WorkflowCanvas.tsx
frontend/src/components/workflow/nodes/: GmailNode.tsx  NodeCard.tsx  SlackNode.tsx  TelegramNode.tsx  WebhookNode.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: schemas.ts
frontend/src/pages/: Auth.tsx  Credentials.tsx  Index.tsx  NotFound.tsx  WorkflowEditor.tsx  Workflows.tsx
frontend/src/services/: api-caller.ts  auth.service.ts  credential.service.ts  workflow.service.ts
frontend/src/store/: workflowStore.ts
frontend/src/types/: workflow.ts
