[project]
name = "backend"
version = "0.1.0"
description = "Workflow Builder backend — visual workflow automation, inspired by n8n."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "cryptography>=48.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.12.0",
    "PyJWT>=2.13.0",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.29",
    "python-telegram-bot>=22.4",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
